# lvt

./: .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  plugin.json  vcpkg.json
.github/: copilot-instructions.md
.github/copilot/skills/: lvt.md
.github/skills/lvt/: SKILL.md
.github/skills/release/: SKILL.md
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  avalonia-plugin.md  chromium-plugin.md  tap-dll-design.md
skills/lvt/: SKILL.md
src/: bounds_util.h  debug.h  element.h  framework_detector.cpp  framework_detector.h  json_serializer.cpp  json_serializer.h  main.cpp  plugin.h  plugin_loader.cpp  plugin_loader.h  screenshot.cpp  screenshot.h  target.cpp  target.h  tree_builder.cpp  tree_builder.h
src/plugin_avalonia/: avalonia_tap_native.cpp  avalonia_tap_native.def  lvt_avalonia_plugin.cpp
src/plugin_avalonia/LvtAvaloniaTreeWalker/: AvaloniaTreeWalker.cs  LvtAvaloniaTreeWalker.csproj
src/plugin_chromium/: chromium_host.cpp  lvt_chromium_plugin.cpp
src/plugin_chromium/extension/: manifest.json  service-worker.js
src/providers/: comctl_provider.cpp  comctl_provider.h  provider.h  win32_provider.cpp  win32_provider.h  winui3_provider.cpp  winui3_provider.h  wpf_inject.cpp  wpf_inject.h  wpf_provider.cpp  wpf_provider.h  xaml_diag_common.cpp  xaml_diag_common.h  xaml_provider.cpp  xaml_provider.h
src/tap/: lvt_tap.cpp  lvt_tap.def  tap_clsid.h
src/tap_wpf/: LvtWpfTap.csproj  WpfTreeWalker.cs  wpf_tap_native.cpp  wpf_tap_native.def
tests/: chromium_tests.cpp  integration_tests.cpp  unit_tests.cpp
tests/avalonia_test_app/: App.axaml  App.axaml.cs  AvaloniaTestApp.csproj  MainWindow.axaml  MainWindow.axaml.cs  Program.cs
